# DeveloperBlog

./: .gitignore  app.py  create_admin.py  export_to_md.sh  gunicorn_config.py  homepage.html  main.py  migrate_db.py  models.py  pyproject.toml  requirements.txt  reset_admin.py  routes.py  start_server.sh  utils.py
static/: robots.txt  sitemap.xml
static/css/: admin-patches.css  custom.css
static/js/: admin.js
templates/: 404.html  500.html  article.html  base.html  category.html  index.html  tag.html
templates/admin/: dashboard.html  edit_article.html  login.html  manage_categories.html  manage_tags.html
templates/partials/: breadcrumbs.html
