[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-slugify>=8.0.4",
    "slugify>=0.0.1",
    "sqlalchemy>=2.0.38",
    "werkzeug>=3.1.3",
    "flask-misaka>=1.0.1",
    "flask-caching>=2.3.1",
    "flask-wtf>=1.2.2",
    "oauthlib>=3.2.2",
    "wtforms>=3.2.1",
]
